Fix collapse implementation in table cells and more (#284)
* Fix broken Sass selector in highlighted gx-properties

issue: 99121

* Fix srcset implementation in gx-image-picker

* Fix disabled property not working in gx-textblock

issue: 99195

* Fix invisible-mode="collapse" implementation in gx-table-cell

When the inner control has invisible-mode="collapse" and is hidden, its parent gx-table-cell will have "display: none"

* Fix gx-button's text-overflow in gx-tables with "overflow:visible"

When the gx-table has overflow: visible (Overflow Style: Show), the gx-button must limit its width to implement the text-overflow CSS property ("...").

To achieve this, the gx-button's content will have "position: absolute". For this to be posible, a couple of divs had to be added to correct the padding and implement the absolute positioning.

issue: 99173

* Fix for gx-grid-start-css not paginating when inside a gx-tab

The gx-tab content must always have "overflow: visible"

issue: 98930

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -47,8 +47,6 @@ gx-button {
 
   @include visibility(flex);
 
-  // Used to decide the position of the image
-  @include imagePosition("button.gx-button", ".disabled");
   @include image-margin();
   flex: 1;
   align-self: stretch;
@@ -88,14 +86,13 @@ gx-button {
     outline: unset;
     pointer-events: all;
     user-select: none;
+
+    @include transition-properties();
   }
 
   & > .gx-button {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: relative;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: contain;
@@ -103,20 +100,42 @@ gx-button {
 
     // Avoid zooming on double tap
     touch-action: manipulation;
-    @include transition-properties();
 
-    & > img {
-      height: var(--gx-button-image-size);
-      width: var(--gx-button-image-size);
-      object-fit: contain;
-    }
+    // Used to decide the position of the image
+    @include imagePosition(
+      ".gx-button-content > .gx-button-content--absolute",
+      ".disabled"
+    );
 
-    & > span {
-      display: block;
-      max-width: 100%;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
+    & > .gx-button-content {
+      display: flex;
+      position: relative;
+      width: 100%;
+      height: 100%;
+
+      // Content must have position: absolute to limit the width
+      & > .gx-button-content--absolute {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+
+        & > img {
+          height: var(--gx-button-image-size);
+          width: var(--gx-button-image-size);
+          object-fit: contain;
+        }
+
+        & > span {
+          display: block;
+          max-width: 100%;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+      }
     }
   }
 }
